# IATalk

./: CMakeLists.txt  HttpDownload.cpp  HttpDownload.h  Makefile  README.md  cmake_install.cmake  datapackage.cpp  iaclient  iaclient.cbp  iaclient_zh_CN.ts  iatalk.pro  logindialog.cpp  logindialog.h  logindialog.ui  loginsetdialog.cpp  loginsetdialog.h  loginsetdialog.ui  mainwindow.cpp  mainwindow.h  nohup.out  qmake_qmake_qm_files.qrc  qtcsettings.cmake  rc.qrc.depends  sendfile
Headers/: Chat.h  ChatMessage.h  HttpDownload.h  database.h  datapackage.h  iaserver.h  iatcpclient.h  iatcpserver.h  logindialog.h  loginsetdialog.h  mainwindow.h  tools.h
Sources/: Chat.cpp  ChatMessage.cpp  HttpDownload.cpp  database.cpp  datapackage.cpp  iaserver.cpp  iatcpclient.cpp  iatcpserver.cpp  logindialog.cpp  loginsetdialog.cpp  main.cpp  mainwindow.cpp
Ui/: logindialog.ui  loginsetdialog.ui  mainwindow.ui
configs/: config.conf
iaclient_autogen/: moc_predefs.h  mocs_compilation.cpp
iaclient_autogen/EWIEGA46WW/: moc_logindialog.cpp  moc_loginsetdialog.cpp  moc_mainwindow.cpp
iaclient_autogen/include/: ui_loginsetdialog.h  ui_mainwindow.h
